--- a/Galaga/View/StartScreen.xaml
+++ b/Galaga/View/StartScreen.xaml
@@ -10,9 +10,9 @@
     <Grid>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="20">
             <TextBlock Text="Galaga" FontSize="36" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center" />
-            <Button x:Name="StartGameButton" Content="Start Game" Width="200" Height="50" Click="StartGameButton_Click" />
-            <Button x:Name="ViewHighScoresButton" Content="View High Scores" Width="200" Height="50" Click="ViewHighScoresButton_Click" />
-            <Button x:Name="ResetHighScoresButton" Content="Reset High Scores" Width="200" Height="50" Click="ResetHighScoresButton_Click" />
+            <Button x:Name="startGameButton" Content="Start Game" Width="200" Height="50" Click="StartGameButton_Click" />
+            <Button x:Name="viewHighScoresButton" Content="View High Scores" Width="200" Height="50" Click="ViewHighScoresButton_Click" />
+            <Button x:Name="resetHighScoresButton" Content="Reset High Scores" Width="200" Height="50" Click="ResetHighScoresButton_Click" />
         </StackPanel>
     </Grid>
 </Page>
